# pw3-moz2

./: .gitignore  Cargo.toml  README.md  embedded.py
maps/: honingtiramisu.json  hungergames.json  spiral.json
perma-bot/: package.json  permabot.js  server.conf
planetwars-rules/src/: config.rs  lib.rs  rules.rs  serializer.rs
src/: embedded.rs  game_manager.rs  lobby_manager.rs  main.rs  planetwars.rs  pw_maps.rs  websocket.rs
src/planetwars/: mod.rs  pw_serializer.rs
