[package]
name = "pw3-moz2"
version = "0.1.0"
authors = ["Ilion Beyst <ilion.beyst@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "embedded"
path = "src/embedded.rs"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features=["codec"] }
bytes = "0.5.0"
warp = "0.2"
futures = { version = "0.3" }

serde_json = "1.0"
rmp-serde = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
hex = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

mozaic-core = { git = "https://github.com/iasoon/MOZAIC2", rev="87ae4836" }
rand = "0.7.3"
planetwars-rules = { path = "./planetwars-rules" }

uuid = { version = "0.8.2", features = ["v4"] }
