[package]
name = "pw3-moz2"
version = "0.1.0"
authors = ["Ilion Beyst <ilion.beyst@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

# [[bin]]
# name = "embedded"
# path = "src/embedded.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features=["codec"] }
tokio-stream = "0.1.3"
bytes = "0.5.0"
warp = "0.3"
futures = { version = "0.3" }
anyhow = "1.0"

serde_json = "1.0"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
hex = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

mozaic-core = { git = "https://github.com/iasoon/MOZAIC2", rev="c825db4cb12db425d573e66892c45dda85ef73c5" }

rand = "0.7.3"
planetwars-rules = { path = "./planetwars-rules" }

uuid = { version = "0.8.2", features = ["v4"] }
